BUG #12597 This is a complete patch (2nd) containing fixes per Serg's review

client/mysqldump.c:
  BUG #12597
  - Dump triggers after data dump of each table
  - created dump_triggers_for_table function
  - added space between "MODE" and "*/"
mysql-test/r/mysqldump.result:
  Tests to test BUG #12597
mysql-test/t/mysqldump.test:
  BUG #12597
  - New tests to test bug #12597